...
        ) {
            if (loading.value) {
                CircularProgressIndicator(
                    modifier = Modifier
                        .padding(top = 16.dp)
                        .align(Alignment.Center)
                        .testTag("Progress Bar")
                )
            }
            if (medicineList.value != null) {
                LazyColumn(
                    modifier = Modifier
                        .fillMaxWidth()
...
